[tool.poetry]
name = "gugles-mission-tracker"
version = "0.1.0"
description = ""
authors = ["echo <echo.backend@gmail.com>"]
readme = "README.md"
packages = [{include = "gugles_mission_tracker"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
oauth2client = "^4.1.3"
gspread = "^5.7.2"

[tool.poetry.scripts]
mission_tracker = "gugles_mission_tracker.app:run"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
